<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<!-- Actionbar -->

	<RelativeLayout
		android:id="@+id/actionbar"
		style="@style/Actionbar" >

		<TextView
			style="@style/ActionbarTitle"
			android:text="@string/title_card_editing" />
	</RelativeLayout>

	<!-- Main view -->

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/actionbar" >

		<LinearLayout style="@style/BodyLinearLayout" >

			<TextView
				style="@style/BodyLinearLayoutItem"
				android:text="@string/signature_card_front_text" />

			<EditText
				android:id="@+id/edit_frond_side"
				style="@style/BodyLinearLayoutItem"
				android:inputType="text" />

			<TextView
				style="@style/BodyLinearLayoutItem"
				android:text="@string/signature_card_back_text" />

			<EditText
				android:id="@+id/edit_back_side"
				style="@style/BodyLinearLayoutItem"
				android:imeOptions="actionDone"
				android:inputType="text" />

			<Button
				android:id="@+id/button_confirm"
				style="@style/BodyLinearLayoutItem"
				android:layout_marginTop="@dimen/confirm_button_top_margin"
				android:text="@string/button_save" />
		</LinearLayout>
	</ScrollView>

</RelativeLayout>