<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<!-- Actionbar -->

	<RelativeLayout
		android:id="@+id/actionbar"
		style="@style/Actionbar" >

		<TextView
			style="@style/ActionbarTitle"
			android:text="@string/title_sync_setup" />
	</RelativeLayout>

	<!-- Main view -->

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_below="@id/actionbar" >

		<LinearLayout style="@style/BodyLinearLayout" >

			<CheckBox
				android:id="@+id/checkbox_sync_with_existing_spreadsheet"
				style="@style/BodyLinearLayoutItem"
				android:text="@string/signature_use_existing_spreadsheet"
				android:textSize="@dimen/checkbox_text_size" />

			<TextView
				style="@style/BodyLinearLayoutItem"
				android:text="@string/signature_spreadsheet_name" />

			<EditText
				android:id="@+id/edit_spreadsheet_name"
				style="@style/BodyLinearLayoutItem"
				android:inputType="text"
				android:singleLine="true" />

			<Spinner
				android:id="@+id/spinner_spreadsheets"
				style="@style/BodyLinearLayoutItem"
				android:visibility="gone" />

			<Button
				android:id="@+id/button_confirm"
				style="@style/BodyLinearLayoutItem"
				android:layout_marginTop="@dimen/confirm_button_top_margin"
				android:text="@string/title_setup" />
		</LinearLayout>
	</ScrollView>

</RelativeLayout>