<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_below="@id/action_bar">

	<LinearLayout style="@style/BodyLinearLayout">

		<EditText
			android:id="@+id/edit_frond_side"
			style="@style/BodyLinearLayoutItem"
			android:hint="@string/signature_card_front_text"
			android:inputType="text" />

		<EditText
			android:id="@+id/edit_back_side"
			style="@style/BodyLinearLayoutItem"
			android:layout_marginTop="@dimen/form_item_top_margin"
			android:hint="@string/signature_card_back_text"
			android:imeOptions="actionDone"
			android:inputType="text" />

		<Button
			android:id="@+id/button_confirm"
			style="@style/BodyLinearLayoutItem"
			android:layout_marginTop="@dimen/confirm_button_top_margin"
			android:text="@string/button_create_card" />
	</LinearLayout>

</ScrollView>